Updated rankings : Fixed rank bug + update design on mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,3 +16,7 @@ code {
 .browser-item {
   margin-top: 1rem;
 }
+
+.weekly-table {
+  padding: 0 !important;
+}
